--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_PASSWORD=1234
 DB_HOST=localhost
 DB_PORT=5432
 JWT_SECRET=your_secret_key_here
+DATABASE_URL=postgresql://postgres:YfeAbtPJOAvyGQETRUHxjrESKTdlgRNw@postgres.railway.internal:5432/railway
