--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_PASSWORD=1234
 DB_HOST=localhost
 DB_PORT=5432
 JWT_SECRET=your_secret_key_here
-DATABASE_URL=postgresql://postgres:YfeAbtPJOAvyGQETRUHxjrESKTdlgRNw@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:YfeAbtPJOAvyGQETRUHxjrESKTdlgRNw@centerbeam.proxy.rlwy.net:26712/railway
